--- a/src/main/resources/CobblemonBroadcaster/config.yml
+++ b/src/main/resources/CobblemonBroadcaster/config.yml
@@ -25,4 +25,6 @@ ultrabeast:
   SpawnMessage: "<aqua>An Ultra Beast <dark_aqua>{pokemon} <aqua>has spawned near <dark_aqua>{player}!"
   FaintMessage: "<red>A Ultra Beast <dark_red>{pokemon}<red> has fainted."
   CaptureMessage: "<aqua>A Ultra Beast <dark_aqua>{pokemon} <aqua>has been captured by <dark_aqua>{player}!"
-
+alolan_form:
+  enabled: true
+  SpawnMessage: "<aqua>An Alolan <white>{pokemon} <aqua>has spawned near <white>{player}!"
