--- a/src/main/resources/CobblemonBroadcaster/config.yml
+++ b/src/main/resources/CobblemonBroadcaster/config.yml
@@ -5,7 +5,9 @@ shiny:
   # Enable/Disable the announcements
   enabled: true
   # Message that gets sent to all players when the Pokemon with the spec spawns in.
-  SpawnMessage: "<yellow>A shiny <gold>{pokemon} <yellow>spawned on <gold>{player}!"
+  SpawnMessage: "<yellow>A shiny <gold>{pokemon} <yellow>spawned on <gold>{player} at x = {x}!"
+  # Message that gets sent to all players when the Pokemon with the spec spawns in from a PokeSnack
+  SpawnMessage-Snack: "<yellow>A shiny <gold>{pokemon} <yellow>was lured in by a PokeSnack at {x}, {y}, {z}!"
   # Message that gets sent to all players when the Pokemon with the spec faints.
   FaintMessage: "<red>A shiny <dark_red>{pokemon}<red> has fainted."
   # Message that gets sent to all players when the Pokemon with the spec is captured.
@@ -25,6 +27,3 @@ ultrabeast:
   SpawnMessage: "<aqua>An Ultra Beast <dark_aqua>{pokemon} <aqua>has spawned near <dark_aqua>{player}!"
   FaintMessage: "<red>A Ultra Beast <dark_red>{pokemon}<red> has fainted."
   CaptureMessage: "<aqua>A Ultra Beast <dark_aqua>{pokemon} <aqua>has been captured by <dark_aqua>{player}!"
-alolan_form:
-  enabled: true
-  SpawnMessage: "<aqua>An Alolan <white>{pokemon} <aqua>has spawned near <white>{player}!"
