--- a/src/main/resources/CobblemonBroadcaster/config.yml
+++ b/src/main/resources/CobblemonBroadcaster/config.yml
@@ -2,6 +2,8 @@
 Config-Version: 1.2.0
 # Name of Spec
 shiny:
+  # Set whether the message is sent to all players, or just on the player it spawned on. (true/false)
+  Global-Alert: true
   # Message that gets sent to all players when the Pokemon with the spec spawns in.
   SpawnMessage: "<yellow>A shiny <gold>{pokemon} <yellow>spawned on <gold>{player} at x = {x}!"
   # Message that gets sent to all players when the Pokemon with the spec spawns in from a PokeSnack
@@ -11,14 +13,17 @@ shiny:
   # Message that gets sent to all players when the Pokemon with the spec is captured.
   CaptureMessage: "<yellow>A shiny <gold>{pokemon} <yellow>has been captured by <gold>{player}!"
 legendary:
+  Global-Alert: true
   SpawnMessage: "<green>A Legendary <dark_green>{pokemon} <green>has spawned near <dark_green>{player}!"
   FaintMessage: "<red>A Legendary <dark_red>{pokemon}<red> has fainted."
   CaptureMessage: "<green>A Legendary <dark_green>{pokemon} <green>has been captured by <dark_green>{player}!"
 mythical:
+  Global-Alert: true
   SpawnMessage: "<light_purple>A Mythical <dark_purple>{pokemon} <light_purple>has spawned near <dark_purple>{player}!"
   FaintMessage: "<red>A Mythical <dark_red>{pokemon}<red> has fainted."
   CaptureMessage: "<light_purple>A Mythical <dark_purple>{pokemon} <light_purple>has been captured by <dark_purple>{player}!"
 ultrabeast:
+  Global-Alert: true
   SpawnMessage: "<aqua>An Ultra Beast <dark_aqua>{pokemon} <aqua>has spawned near <dark_aqua>{player}!"
   FaintMessage: "<red>A Ultra Beast <dark_red>{pokemon}<red> has fainted."
   CaptureMessage: "<aqua>A Ultra Beast <dark_aqua>{pokemon} <aqua>has been captured by <dark_aqua>{player}!"
